--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   margin: 0 auto;
   padding: 0;
   background-color: #ffffff;
+  box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.2);
 }
 
 header {
