--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,47 @@
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+
+  font-family: "symbols-sedona";
+  src: url("../fonts/symbols-sedona.woff") format("woff"),
+       url("../fonts/symbols-sedona.woff2") format("woff2");
+}
+
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  display: inline-block;
+  width: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  font-weight: normal;
+  line-height: 1em;
+  font-family: "symbols-sedona";
+  text-align: center;
+  text-transform: none;
+  text-decoration: inherit;
+  font-style: normal;
+  font-variant: normal;
+
+  speak: none;
+}
+
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-star::before { content: "\2605"; } /* "★" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-calendar::before { content: "\e800"; } /* "" */
+.icon-plus::before { content: "\e801"; } /* "" */
+.icon-minus::before { content: "\e802"; } /* "" */
+.icon-youtube::before { content: "\f39e"; } /* "" */
+
 body {
   font-size: 14px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   min-width: 1250px;
   background-color: #f2f2f2;
@@ -26,7 +66,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   background-color: #ffffff;
-  box-shadow: 0px -25px 15px 0px rgba(0, 1, 1, 0.2);
+  box-shadow: 0px -10px 15px 0px rgba(0, 1, 1, 0.2);
 }
 
 img.center {
@@ -47,6 +87,7 @@ h2 {
   margin: 0;
   padding: 0;
   font-size: 21px;
+  font-weight: 700;
   line-height: 21px;
   text-transform: uppercase;
   text-align: center;
@@ -114,16 +155,12 @@ p {
 }
 
 .col {
-  width: 400px;
-  min-height: 206px;
+  width: 340px;
+  min-height: 186px;
+  padding: 20px 30px;
   padding-top: 50px;
   background-color: #81b3d2;
   color: #ffffff;
-}
-
-.row {
-  width: 1200px;
-  height: 256px;
 }
 
 .promo .col {
@@ -151,112 +188,193 @@ p {
   background-color: #eeeeee;
 }
 
-.search-form-title {
-  position: relative;
-  float: left;
-  width: 1200px;
-  min-height: 260px;
-  padding-top: 55px;
-}
-
-.search-form-title h2 {
+.search-promo-title h2 {
   margin: 0;
-  padding: 0;
-  padding-bottom: 30px;
+  padding-top: 55px;
+  padding-bottom: 35px;
   font-size: 30px;
   line-height: 24px;
-  text-align: center;
-  text-transform: uppercase;
 }
 
-.search-form-title  p {
-  margin: 0;
-  margin-bottom: 135px;
+.search-promo-title  p {
   line-height: 24px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #333333;
+  padding-bottom: 140px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.map {
+  position: relative;
 }
 
 .search-form {
-  position: absolute;;
+  position: absolute;
   width: 570px;
   height: 480px;
-  top: 200px;
+  top: -87px;
   left: 315px;
   right: -315px;
-  background-color: #ffffff;
+  background: #ffffff;
   box-shadow: 0px 7px 15px 0px rgba(0, 1, 1, 0.15);
 }
 
-.search-form h2 {
+.search-form-title {
   margin: 0;
   margin-bottom: 55px;
   padding: 33px 0;
-  font-size: 21px;
   line-height: 26px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
   background-color: #766357;
   color: #ffffff;
 }
 
-.search-form input[type=date] {
-	background: #f2f2f2;
-  border: none;
-	color: #000000;
-	font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 14px;
-	line-height: 26px;
-	outline: 0;
-	width: 330px;
-  height: 38px;
-  padding-left: 15px;
+.search-form-row {
   margin-bottom: 30px;
 }
 
-.search-form .search-form-label {
-  display: inline-block;
-  width: 110px;
-  margin-left: 40px;
+.form-label {
+  min-height: 32px;
+  padding-left: 55px;
+  padding-top: 6px;
+}
+
+.form-label label {
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.search-form .count-btn {
+input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
+
+input[type=date]::-webkit-calendar-picker-indicator {
+    -webkit-appearance: none;
+    display: none;
+}
+
+input[type=date]::-webkit-clear-button {
+    display: none;
+    -webkit-appearance: none;
+}
+
+.search-form-row input[type=date] {
+  width: 322px;
+  height: 38px;
+  padding-left: 15px;
+  padding-right: 9px;
+  margin-right: 55px;
+	background: #f2f2f2;
+  border: none;
+	outline: 0;
+  color: #000000;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 26px;
+}
+
+.search-form-row input[type=date]:hover {
+  background: #ebebeb;
+}
+
+.search-form-row input[type=date]::after {
+  content: "\e800";
+  font-family: "symbols-sedona";
+  color: #c2c2c2;
+  display: inline-block;
+  vertical-align: top;
+  font-size: 21px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.search-form-row input[type=date]:hover::after {
+  color: #000000;
+}
+
+.search-form-row input[type=date]:active::after {
+  color: #81b3d2;
+}
+
+.search-form-half {
+  width: 49%;
+  display: inline-block;
+  vertical-align: top;
+  font-size: 0px;
+}
+
+.search-form-half .search-form-half-right {
+  margin-right: 47px;
+}
+
+.search-form-half button[type=button] {
   width: 38px;
   height: 38px;
   border: 0;
-  margin: 0;
-  padding: 0;
+  outline: none;
+  cursor: pointer;
   background: #f2f2f2;
+  font-size: 14px;
+  line-height: 26px;
   color: #a9a9a9;
+}
+
+.search-form-half button[type=button]:hover {
+  color: #000000;
+}
+
+.search-form-half button[type=button]:active {
+  color: #81b3d2;
 }
 
 .search-form input[type=text] {
   border: 0;
   margin: 0;
   padding: 0;
-  width: 38px;
+  outline: none;
+  width: 34px;
   height: 38px;
   background: #f2f2f2;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 700;
   color: #000000;
   text-align: center;
 }
 
+.search-form-row button[type=submit] {
+  width: 460px;
+  min-height: 60px;
+  margin: 25px 55px;
+  border: 0;
+  cursor: pointer;
+  background: #81b3d2;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.search-form-row button[type=submit]:hover {
+  background: #669ec0;
+}
+
+.search-form-row button[type=submit]:active {
+  background: #5496bd;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .main-footer {
-  padding-top: 35px;
-  padding-bottom: 35px;
-  color: #000000;
+  padding: 35px 0;
   background: rgba(255, 255, 255, 0.9);
 }
 
 .footer-tagname {
-  float: left;
-  padding-left: 130px;
+  color: #000000;
+  margin-left: 130px;
   margin-right: 250px;
 }
 
@@ -264,27 +382,42 @@ p {
   padding: 0;
   margin: 0;
   padding-top: 12px;
-  font-size: 21px;
   line-height: 26px;
-  font-weight: 700;
-  text-transform: uppercase;
 }
 
 .footer-social {
-  float: left;
   width: 160px;
 }
 
 .social-btn {
   display: inline-block;
   width: 45px;
-  height: 45px;
+  height: 33px;
+  padding-top: 12px;
   margin: 0 3px;
-
   font-size: 0;
   vertical-align: top;
   text-decoration: none;
+  text-align: center;
   background: #81b3d2;
+}
+
+.social-btn:hover {
+  background: #669ec0;
+}
+
+.social-btn:active {
+  background: #5496bd;
+}
+
+.footer-social i {
+  font-size: 19px;
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.footer-social i:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .social-btn:last-child {
