--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   background-color: #ffffff;
-  box-shadow: 0px -10px 15px 0px rgba(0, 1, 1, 0.2);
+  box-shadow: 0 -8px 15px 0px rgba(0, 0, 0, 0.2);
 }
 
 img.center {
@@ -137,7 +137,19 @@ p {
 }
 
 .main-navigation a:active {
-  color: rgba(0, 0, 0, 0.4);;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.main-navigation a.active {
+  color: #766357;
+}
+
+.main-navigation a.active:hover {
+  color: #604e43;
+}
+
+.main-navigation a.active:active {
+  color: rgba(118, 99, 87, 0.3);
 }
 
 .main-header .sedona-header {
@@ -373,6 +385,8 @@ input[type=date]::-webkit-clear-button {
 }
 
 .main-footer {
+  position: relative;
+  z-index: -666;
   padding: 35px 0;
   background: rgba(255, 255, 255, 0.9);
 }
@@ -391,7 +405,8 @@ input[type=date]::-webkit-clear-button {
 }
 
 .footer-social {
-  width: 160px;
+  width: 150px;
+  font-size: 0;
 }
 
 .social-btn {
@@ -517,9 +532,91 @@ input[type=date]::-webkit-clear-button {
   color: #000000;
 }
 
+
 .catalog-sort {
-  height: 86px;
+  padding: 25px 70px;
   border-bottom: 1px solid #e5e5e5;
+}
+
+.catalog-sort-result {
+  width: 165px;
+}
+
+.catalog-sort-result h2 {
+  text-align: left;
+}
+
+.catalog-sort-list {
+  width: 400px;
+}
+
+.catalog-sort-list ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.catalog-sort-list li {
+  display: inline-block;
+  font-size: 12px;
+  text-transform: uppercase;
+  line-height: 18px;
+}
+
+.catalog-sort-list li:first-child {
+  margin-right: 35px;
+}
+
+.catalog-sort-list a {
+  display: block;
+  margin-right: 30px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.3);
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
+}
+
+.catalog-sort-list a:hover {
+  color: #81b3d2;
+  border-bottom: 1px dotted #81b3d2;
+}
+
+.catalog-sort-list a:active {
+  color: #000000;
+  border: none;
+}
+
+.catalog-sort-list a.active {
+  color: #81b3d2;
+  border: none;
+  cursor: default;
+  pointer-events: none;
+}
+
+.catalog-sort-arrows {
+  font-size: 0;
+}
+
+.arrows a {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+  font-size: 23px;
+  line-height: 20px;
+  color: #cccccc;
+}
+
+.arrows a:hover {
+  color: #000000;
+}
+
+.arrows a:active {
+  color: #81b3d2;
+}
+
+.arrows a.active {
+  color: #81b3d2;
+  cursor: default;
+  pointer-events: none;
 }
 
 .catalog-item {
@@ -529,4 +626,119 @@ input[type=date]::-webkit-clear-button {
 
 .item-photo {
   width: 165px;
+}
+
+.item-info {
+  width: 360px;
+}
+
+.item-info-title a {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: left;
+  text-decoration: none;
+  color: #000000;
+}
+
+.item-info-title a:hover {
+  color: #81b3d2;
+}
+
+.item-info-title a:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.item-info-type {
+  display: inline-block;
+  vertical-align: top;
+  width: 110px;
+  margin-right: 6px;
+}
+
+.item-info span {
+  display: block;
+  line-height: 21px;
+  margin-bottom: 9px;
+  text-transform: uppercase;
+}
+
+.item-info-type a {
+  display: block;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+  background: #81b3d2;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 4px 0;
+}
+
+.item-info-type a:hover {
+  background: #669ec0;
+}
+
+.item-info-type a:active {
+  background: #5496bd;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.item-info-price {
+  display: inline-block;
+  width: 140px;
+}
+
+.item-info-price a {
+  display: block;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+  background: #766357;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 4px 0;
+}
+
+.item-info-price a:hover {
+  background: #604e43;
+}
+
+.item-info-price a:active {
+  background: #503e33;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.item-rating {
+  width: 240px;
+  text-align: right;
+  font-size: 0;
+}
+
+.stars {
+  margin-bottom: 38px;
+}
+
+.stars i {
+  font-size: 19px;
+  line-height: 21px;
+  color: #81b3d2;
+}
+
+.item-rating span {
+  display: inline-block;
+  padding: 5px 15px;
+  color: #666666;
+  background: #f2f2f2;
+  font-size: 14px;
+  line-height: 21px;
+
 }
